# zenquotes

./: .gitignore  LICENSE  README.md  bump_and_release.sh  pyproject.toml
src/universal_mcp_zenquotes/: README.md  app.py  mcp.py  server.py
tests/: test_app.py
