[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "universal-mcp-zenquotes"
version = "0.1.6"
description = "A Universal MCP Application: universal_mcp_zenquotes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "universal_mcp>=0.1.15",]
[[project.authors]]
name = "Manoj Bajaj"
email = "manoj@agentr.dev"

[project.license]
text = "MIT"

[project.optional-dependencies]
test = [ "pytest>=7.0.0,<9.0.0", "pytest-cov",]
dev = [ "ruff", "pre-commit",]

[project.scripts]
universal_mcp_zenquotes = "universal_mcp_zenquotes:main"

[project.urls]
Homepage = "https://github.com/universal-mcp/zenquotes"
Repository = "https://github.com/universal-mcp/zenquotes"

[tool.ruff]
line-length = 88
select = [ "E", "W", "F", "I", "UP", "PL", "T20",]
ignore = []

[tool.hatch.version]
path = "src/universal_mcp_zenquotes/__init__.py"

[tool.coverage.run]
source = [ "src/universal_mcp_zenquotes",]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff.format]
quote-style = "double"

[tool.hatch.envs.default]
dependencies = [ "pytest", "pytest-cov",]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report term-missing --cov-config=pyproject.toml --cov=src/universal_mcp_zenquotes --cov=tests {args:tests}"
lint = "ruff check . && ruff format --check ."
format = "ruff format ."
